Add emmm... something

--- a/dqnAINetwork.ipynb
+++ b/dqnAINetwork.ipynb
@@ -70,7 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Experience Replay Buffer\n",
     "class ReplayBuffer:\n",
     "    def __init__(self, capacity):\n",
@@ -95,7 +94,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# DQN Agent\n",
     "class DQNAgent:\n",
     "    def __init__(self, input_channels, input_height, input_width, num_actions, \n",
@@ -196,7 +194,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Street Fighter Environment wrapper\n",
     "class StreetFighterEnv:\n",
     "    def __init__(self, screen_region=(0, 0, 1280, 720), attack_mode='modern'):\n",
@@ -211,22 +208,29 @@
     "        self.moving_left = False\n",
     "        self.moving_right = False\n",
     "        self.crouching = False\n",
+    "        self.jumping = False\n",
     "        \n",
     "        # Define actions (map integers to game actions)\n",
     "        self.actions = [\n",
-    "            self._no_op,          # 0: Do nothing\n",
-    "            self.character.light,  # 1: Light attack\n",
-    "            self.character.medium, # 2: Medium attack\n",
-    "            self.character.heavy,  # 3: Heavy attack\n",
-    "            self.character.hadouken, # 4: Hadouken\n",
-    "            self.character.shoryuken, # 5: Shoryuken\n",
-    "            self.character.dragonlash_kick, # 6: Dragonlash kick\n",
-    "            self._defense,         # 7: Defense/parry\n",
-    "            self._burst,           # 8: Power burst\n",
-    "            self._move_left,       # 9: Move left\n",
-    "            self._move_right,      # 10: Move right\n",
-    "            self._crouch,          # 11: Crouch\n",
-    "            self._stop_movement    # 12: Stop all movement\n",
+    "            self._no_op,                        # Do nothing\n",
+    "            \n",
+    "            self.character.light,               # Light attack\n",
+    "            self.character.medium,              # Medium attack\n",
+    "            self.character.heavy,               # Heavy attack\n",
+    "            self.character.throw,               # Throw\n",
+    "            self.character.jump,                # Jump\n",
+    "            \n",
+    "            self.character.hadouken,            # Hadouken\n",
+    "            self.character.shoryuken,           # Shoryuken\n",
+    "            self.character.dragonlash_kick,     # Dragonlash kick\n",
+    "            \n",
+    "            self._defense,                      # Defense/parry\n",
+    "            self._burst,                        # Power burst\n",
+    "            self._move_left,                    # Move left\n",
+    "            self._move_right,                   # Move right\n",
+    "            self._crouch,                       # Crouch\n",
+    "            \n",
+    "            self._stop_movement,                # Stop all movement\n",
     "        ]\n",
     "        \n",
     "    def _no_op(self):\n",
@@ -282,6 +286,10 @@
     "        if self.crouching:\n",
     "            self.character.impl.release_crouch()\n",
     "            self.crouching = False\n",
+    "            \n",
+    "        if self.jumping:\n",
+    "            self.character.impl.release_jump()\n",
+    "            self.jumping = False\n",
     "    \n",
     "    def reset(self):\n",
     "        # Reset the game (you might need to implement a way to restart the match)\n",
@@ -342,7 +350,12 @@
     "        # Get current HP values\n",
     "        player_HP_area = screen_capture((115, 85, 1165, 100))\n",
     "        current_left_hp = L_player_HP(player_HP_area)\n",
-    "        current_right_hp = L_player_HP(player_HP_area)\n",
+    "        current_right_hp = R_player_HP(player_HP_area)\n",
+    "        \n",
+    "        # Check player_HP_area\n",
+    "        # print(f\"\\rLeft HP: {current_left_hp}, Right HP: {current_right_hp}\", end='')\n",
+    "        # cv2.imshow(\"123\", player_HP_area) # this\n",
+    "        # cv2.waitKey(1)\n",
     "        \n",
     "        # Calculate HP changes\n",
     "        left_hp_change = current_left_hp - self.last_left_hp\n",
@@ -521,7 +534,7 @@
     "    print(\"Press 'q' at any time to stop training\")\n",
     "    time.sleep(3)\n",
     "    # Train agent\n",
-    "    agent = train_sf_agent(episodes=500, target_update=10, save_interval=50)\n",
+    "    agent = train_sf_agent(episodes=5000, target_update=10, save_interval=50)\n",
     "    \n",
     "    # Test trained agent\n",
     "    # print(\"\\nTesting trained agent...\")\n",
