--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a53b39d5",
    "metadata": {},
    "outputs": [],
@@ -83,15 +83,18 @@
     "    ken.impl.hold_crouch()\n",
     "    time.sleep(2)\n",
     "    ken.impl.release_crouch()\n",
+    "    \n",
+    "    time.sleep(1)\n",
     "\n",
-    "# Execute tests when the script is run directly\n",
+    "    ken.impl.move_jump()\n",
+    "\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
-    "    time.sleep(2)  # Delay before starting tests\n",
-    "    # test_ken_basic()\n",
-    "    # test_ken_special_moves()\n",
-    "    # test_ken_defense()\n",
-    "    # test_ken_burst()\n",
-    "    test_ken_movement()"
+    "    time.sleep(1)\n",
+    "    ken = Ken(attack_mode='modern')\n",
+    "    for n in range(10):\n",
+    "        test_ken_basic()\n",
+    "        time.sleep(1)"
    ]
   },
   {
