--- a/dqnAINetwork.ipynb
+++ b/dqnAINetwork.ipynb
@@ -7,12 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import random\n",
+    "import datetime\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
-    "import random\n",
     "import cv2\n",
     "import time\n",
     "import keyboard\n",
@@ -99,6 +101,7 @@
     "    def __init__(self, input_channels, input_height, input_width, num_actions, \n",
     "                 lr=0.0001, gamma=0.99, epsilon=1.0, epsilon_min=0.1, \n",
     "                 epsilon_decay=0.995, buffer_size=10000, batch_size=32):\n",
+    "        \n",
     "        self.num_actions = num_actions\n",
     "        self.gamma = gamma  # discount factor\n",
     "        self.epsilon = epsilon  # exploration rate\n",
@@ -119,6 +122,13 @@
     "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "        self.policy_net.to(self.device)\n",
     "        self.target_net.to(self.device)\n",
+    "        \n",
+    "        # Action sequence history\n",
+    "        self.action_history = []\n",
+    "        self.max_history_len = 5\n",
+    "        \n",
+    "        self.steps_done = 0\n",
+    "        self.episodes_done = 0\n",
     "        \n",
     "    def select_action(self, state):\n",
     "        # Epsilon-greedy action selection\n",
@@ -171,20 +181,44 @@
     "    def update_target_network(self):\n",
     "        self.target_net.load_state_dict(self.policy_net.state_dict())\n",
     "        \n",
-    "    def save(self, path):\n",
+    "    def save_model(self, path=\"models\", tag=None, include_time=True):\n",
+    "        # Create directory if it doesn't exist\n",
+    "        os.makedirs(path, exist_ok=True)\n",
+    "\n",
+    "        timestamp = datetime.datetime.now().strftime(\"%Y%m%d\") if include_time else \"\"\n",
+    "\n",
+    "        tag_str = f\"_{tag}\" if tag else \"\"\n",
+    "\n",
+    "        filename = f\"sf_agent_ep{self.episodes_done}{tag_str}_{timestamp}.pth\" if timestamp else f\"sf_agent_ep{self.episodes_done}{tag_str}.pth\"\n",
+    "        full_path = os.path.join(path, filename)\n",
+    "\n",
+    "        # Save model\n",
     "        torch.save({\n",
     "            'policy_net': self.policy_net.state_dict(),\n",
     "            'target_net': self.target_net.state_dict(),\n",
     "            'optimizer': self.optimizer.state_dict(),\n",
+    "            'steps_done': self.steps_done,\n",
+    "            'episodes_done': self.episodes_done,\n",
     "            'epsilon': self.epsilon\n",
-    "        }, path)\n",
-    "        \n",
-    "    def load(self, path):\n",
-    "        checkpoint = torch.load(path)\n",
-    "        self.policy_net.load_state_dict(checkpoint['policy_net'])\n",
-    "        self.target_net.load_state_dict(checkpoint['target_net'])\n",
-    "        self.optimizer.load_state_dict(checkpoint['optimizer'])\n",
-    "        self.epsilon = checkpoint['epsilon']"
+    "        }, full_path)\n",
+    "\n",
+    "        print(f\"Model saved at episode {self.episodes_done}\")\n",
+    "\n",
+    "    def load_model(self, checkpoint_path):\n",
+    "        if os.path.exists(checkpoint_path):\n",
+    "            checkpoint = torch.load(checkpoint_path)\n",
+    "            \n",
+    "            self.policy_net.load_state_dict(checkpoint['policy_net'])\n",
+    "            self.target_net.load_state_dict(checkpoint['target_net'])\n",
+    "            self.optimizer.load_state_dict(checkpoint['optimizer'])\n",
+    "            self.steps_done = checkpoint['steps_done']\n",
+    "            self.episodes_done = checkpoint['episodes_done']\n",
+    "            self.epsilon = checkpoint['epsilon']\n",
+    "            \n",
+    "            print(f\"Model loaded from {checkpoint_path}\")\n",
+    "        else:\n",
+    "            print(f\"No checkpoint found at {checkpoint_path}\")\n",
+    "        "
    ]
   },
   {
@@ -223,6 +257,10 @@
     "            self.character.hadouken,            # Hadouken\n",
     "            self.character.shoryuken,           # Shoryuken\n",
     "            self.character.dragonlash_kick,     # Dragonlash kick\n",
+    "\n",
+    "            self.character.impl.move_left,\n",
+    "            self.character.impl.move_crouch,\n",
+    "            self.character.impl.move_right,\n",
     "            \n",
     "            self._defense,                      # Defense/parry\n",
     "            self._burst,                        # Power burst\n",
@@ -401,9 +439,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Training function\n",
-    "def train_sf_agent(episodes=1000, target_update=10, save_interval=50):\n",
+    "def train_agent(episodes=50000, target_update=10, save_interval=50):\n",
     "    # Define environment and agent parameters\n",
     "    env = StreetFighterEnv(screen_region=(0, 0, 1280, 720), attack_mode='modern')\n",
     "    input_channels = 1  # Grayscale image has 1 channel\n",
@@ -425,28 +462,26 @@
     "        batch_size=32\n",
     "    )\n",
     "    \n",
-    "    # Optional: Load pretrained model if available\n",
-    "    try:\n",
-    "        agent.load(\"street_fighter_dqn_latest.pth\")\n",
-    "        print(\"Loaded pretrained model\")\n",
-    "    except:\n",
-    "        print(\"Training new model from scratch\")\n",
+    "    # Try to load previous checkpoint\n",
+    "    model_path = \"models\"\n",
+    "    checkpoint_files = [f for f in os.listdir(model_path) if f.endswith('.pth')] if os.path.exists(model_path) else []\n",
+    "    \n",
+    "    if checkpoint_files:\n",
+    "        latest_checkpoint = max(checkpoint_files, key=lambda x: int(x.split('ep')[1].split('.')[0]))\n",
+    "        agent.load_model(os.path.join(model_path, latest_checkpoint))\n",
     "    \n",
     "    try:\n",
-    "        # Training loop\n",
-    "        for episode in range(episodes):\n",
+    "        for episode in range(agent.episodes_done + 1, episodes + 1):\n",
     "            state = env.reset()\n",
     "            total_reward = 0\n",
     "            done = False\n",
+    "            step = 0\n",
+    "            agent.action_history = []  # Reset action history at start of episode\n",
+    "            \n",
+    "            print(f\"\\nEpisode {episode}/{episodes}\")\n",
     "            \n",
     "            # Run one episode\n",
     "            while not done:\n",
-    "                # Check for manual interrupt\n",
-    "                if keyboard.is_pressed('q'):\n",
-    "                    print(\"\\nTraining manually interrupted\")\n",
-    "                    env.close()\n",
-    "                    return agent\n",
-    "                    \n",
     "                # Select and perform action\n",
     "                action = agent.select_action(state)\n",
     "                next_state, reward, done, _ = env.step(action)\n",
@@ -460,21 +495,37 @@
     "                # Move to next state\n",
     "                state = next_state\n",
     "                total_reward += reward\n",
+    "            \n",
+    "                step += 1\n",
+    "            \n",
+    "                # Print status\n",
+    "                if step % 100 == 0:\n",
+    "                    print(f\"\\rStep {step}, Epsilon: {agent.epsilon:.3f}, Reward: {total_reward:.2f}\", end='')\n",
+    "                \n",
+    "                # Check for manual interrupt\n",
+    "                if keyboard.is_pressed('q'):\n",
+    "                    print(\"\\nTraining manually interrupted\")\n",
+    "                    agent.save_model()\n",
+    "                    env.close()\n",
+    "                    return agent\n",
     "                \n",
     "            # Update target network periodically\n",
     "            if episode % target_update == 0:\n",
     "                agent.update_target_network()\n",
     "                \n",
     "            # Print episode stats\n",
-    "            print(f\"Episode: {episode}, Total Reward: {total_reward:.2f}, Epsilon: {agent.epsilon:.2f}\")\n",
+    "            print(f\"\\rEpisode {episode} finished after {step} steps. Total reward: {total_reward:.2f}\")\n",
+    "            agent.episodes_done = episode\n",
     "            \n",
     "            # Save checkpoint\n",
     "            if episode % save_interval == 0:\n",
-    "                agent.save(f\"street_fighter_dqn_episode_{episode}.pth\")\n",
-    "                agent.save(\"street_fighter_dqn_latest.pth\")  # Always save latest\n",
-    "    \n",
+    "                agent.save_model()\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"\\nTraining interrupted by user\")\n",
+    "        \n",
     "    finally:\n",
-    "        # Make sure to release all keys when training ends\n",
+    "        # Make sure to save model and release all keys when training ends\n",
+    "        agent.save_model()\n",
     "        env.close()\n",
     "    \n",
     "    return agent"
@@ -487,7 +538,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Test the trained agent\n",
     "def test_agent(agent, episodes=5):\n",
     "    env = StreetFighterEnv(screen_region=(0, 0, 1280, 720), attack_mode='modern')\n",
@@ -524,21 +574,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b43845a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add this function to load a model for testing\n",
+    "def load_model_for_testing(model_path=None):\n",
+    "    # Define environment to get action space size\n",
+    "    env = StreetFighterEnv(screen_region=(0, 0, 1280, 720), attack_mode='modern')\n",
+    "    input_channels = 1  # Grayscale image has 1 channel\n",
+    "    input_height = 84\n",
+    "    input_width = 84\n",
+    "    num_actions = len(env.actions)\n",
+    "    \n",
+    "    # Initialize agent with the same parameters used during training\n",
+    "    agent = DQNAgent(\n",
+    "        input_channels=input_channels,\n",
+    "        input_height=input_height,\n",
+    "        input_width=input_width,\n",
+    "        num_actions=num_actions,\n",
+    "        lr=0.0001,\n",
+    "        gamma=0.99,\n",
+    "        epsilon=0.1,  # Low epsilon for testing (minimal exploration)\n",
+    "        epsilon_min=0.1,\n",
+    "        epsilon_decay=0.995,\n",
+    "        buffer_size=10000,\n",
+    "        batch_size=32\n",
+    "    )\n",
+    "    \n",
+    "    # If specific model path is provided, load it\n",
+    "    if model_path and os.path.exists(model_path):\n",
+    "        agent.load_model(model_path)\n",
+    "        return agent\n",
+    "    \n",
+    "    # Otherwise find the latest checkpoint\n",
+    "    model_dir = \"models\"\n",
+    "    if os.path.exists(model_dir):\n",
+    "        checkpoint_files = [f for f in os.listdir(model_dir) if f.endswith('.pth')]\n",
+    "        if checkpoint_files:\n",
+    "            # Sort by episode number extracted from filename\n",
+    "            latest_checkpoint = max(checkpoint_files, \n",
+    "                                   key=lambda x: int(x.split('ep')[1].split('_')[0]) \n",
+    "                                   if 'ep' in x else 0)\n",
+    "            agent.load_model(os.path.join(model_dir, latest_checkpoint))\n",
+    "            return agent\n",
+    "    \n",
+    "    print(\"No model checkpoint found. Please train the agent first or provide a valid model path.\")\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "16f90de6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Replace your main function with this\n",
     "if __name__ == \"__main__\":\n",
-    "    print(\"Starting DQN training for Street Fighter...\")\n",
-    "    print(\"Press 'q' at any time to stop training\")\n",
     "    time.sleep(3)\n",
-    "    # Train agent\n",
-    "    agent = train_sf_agent(episodes=5000, target_update=10, save_interval=50)\n",
     "    \n",
-    "    # Test trained agent\n",
-    "    # print(\"\\nTesting trained agent...\")\n",
-    "    # test_agent(agent, episodes=5)"
+    "    # Choose mode: 'train' or 'test'\n",
+    "    mode = 'test'  # Change to 'train' if you want to train\n",
+    "    \n",
+    "    if mode == 'train':\n",
+    "        print(\"Starting DQN training for Street Fighter...\")\n",
+    "        print(\"Press 'q' at any time to stop training\")\n",
+    "        agent = train_agent(episodes=50000, target_update=10, save_interval=50)\n",
+    "    \n",
+    "    elif mode == 'test':\n",
+    "        print(\"Loading model for testing...\")\n",
+    "        # find the latest model automatically\n",
+    "        agent = load_model_for_testing()\n",
+    "        # agent = load_model_for_testing(\"models/sf_agent_ep500_20240407.pth\")\n",
+    "        \n",
+    "        if agent:\n",
+    "            print(\"Testing trained agent...\")\n",
+    "            # An episode is one full match\n",
+    "            test_agent(agent, episodes=5)"
    ]
   }
  ],
