--- a/test.ipynb
+++ b/test.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1741e043",
+   "metadata": {},
+   "source": [
+    "## TEST output player HP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a53b39d5",
    "metadata": {},
    "outputs": [],
@@ -21,96 +29,97 @@
     "# Choose attack mode: 'modern' or 'classic'\n",
     "ken = Ken(attack_mode='modern')\n",
     "\n",
-    "# Test Ken's basic attacks\n",
-    "def test_ken_basic():\n",
-    "    ken.light()  # Perform light attack\n",
+    "def test_basic_attack():\n",
+    "    ken.impl.light_attack()     # Perform light attack\n",
     "    time.sleep(1)\n",
-    "    ken.medium()  # Perform medium attack\n",
+    "    ken.impl.medium_attack()    # Perform medium attack\n",
     "    time.sleep(1)\n",
-    "    ken.heavy()  # Perform heavy attack\n",
+    "    ken.impl.heavy_attack()     # Perform heavy attack\n",
     "    time.sleep(1)\n",
-    "\n",
-    "# Test Ken's special moves\n",
-    "def test_ken_special_moves():\n",
-    "    ken.hadouken()  # Perform Hadouken\n",
+    "    ken.impl.special_attack()   # Perform heavy attack\n",
     "    time.sleep(1)\n",
-    "    ken.shoryuken()  # Perform Shoryuken\n",
-    "    time.sleep(1)\n",
-    "    ken.dragonlash_kick()  # Perform Dragonlash Kick\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "# Test Ken's defense techniques\n",
-    "def test_ken_defense():\n",
-    "    if ken.attack_mode == 'modern':\n",
-    "        ken.impl.drive_parry()  # Use Drive Parry in modern mode\n",
-    "    else:\n",
-    "        ken.impl.parry()  # Use regular Parry in classic mode\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "# Test Ken's power burst technique\n",
-    "def test_ken_burst():\n",
-    "    if ken.attack_mode == 'modern':\n",
-    "        ken.impl.drive_impact()  # Use Drive Impact in modern mode\n",
-    "    else:\n",
-    "        ken.impl.burst()  # Use Burst in classic mode\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "# Test Ken's movement\n",
-    "def test_ken_movement():\n",
-    "    # print(\"Tap move: Jump, Left, Crouch, Right\")\n",
-    "    # ken.impl.move_jump()\n",
-    "    # time.sleep(1)\n",
-    "    # ken.impl.move_left()\n",
-    "    # time.sleep(1)\n",
-    "    # ken.impl.move_crouch()\n",
-    "    # time.sleep(1)\n",
-    "    # ken.impl.move_right()\n",
-    "    # time.sleep(1)\n",
-    "\n",
-    "    print(\"Hold move: Hold Left -> Hold Right\")\n",
-    "    ken.impl.hold_left()\n",
-    "    time.sleep(2)  # Hold for 2 seconds\n",
-    "    ken.impl.release_left()\n",
-    "\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "    ken.impl.hold_right()\n",
-    "    time.sleep(2)\n",
-    "    ken.impl.release_right()\n",
     "    \n",
+    "def test_other_commands():\n",
+    "    ken.impl.drive_parry()      # defense\n",
     "    time.sleep(1)\n",
-    "\n",
-    "    ken.impl.hold_crouch()\n",
+    "    ken.impl.drive_impact()     # Drive Impact\n",
     "    time.sleep(2)\n",
-    "    ken.impl.release_crouch()\n",
-    "    \n",
+    "    ken.impl.throw()            # Throw\n",
+    "    time.sleep(1)\n",
+    "    ken.impl.assist()           # OC\n",
     "    time.sleep(1)\n",
     "\n",
+    "def test_move_left_right_crouch():\n",
     "    ken.impl.move_jump()\n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "    # Move Left\n",
+    "    ken.impl.move_left_continuously()   \n",
+    "    time.sleep(3)\n",
+    "    ken.impl.stop_movement()\n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "    # Move Right\n",
+    "    ken.impl.move_right_continuously()\n",
+    "    time.sleep(3)\n",
+    "    ken.impl.stop_movement()\n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "    # crouch\n",
+    "    ken.impl.move_crouch_continuously()\n",
+    "    time.sleep(3)\n",
+    "    ken.impl.stop_movement()\n",
+    "    time.sleep(3)\n",
     "\n",
+    "def test_up_down_left_right():\n",
+    "    # down left\n",
+    "    ken.impl.down_left_continuously()\n",
+    "    time.sleep(2)\n",
+    "    ken.impl.stop_movement()\n",
+    "    time.sleep(2)\n",
+    "    \n",
+    "    # down right\n",
+    "    ken.impl.down_right_continuously()\n",
+    "    time.sleep(2)\n",
+    "    ken.impl.stop_movement()\n",
+    "    time.sleep(2)\n",
+    "    \n",
+    "    # up left\n",
+    "    ken.impl.up_left_continuously()\n",
+    "    time.sleep(2)\n",
+    "    ken.impl.stop_movement()\n",
+    "    \n",
+    "    # up right\n",
+    "    ken.impl.up_right_continuously()\n",
+    "    time.sleep(2)\n",
+    "    ken.impl.stop_movement()\n",
+    "\n",
+    "def test_ken_special_skills():\n",
+    "    print(\"Testing Ken's basic special moves...\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(2)\n",
     "    ken = Ken(attack_mode='modern')\n",
-    "    for n in range(10):\n",
-    "        test_ken_basic()\n",
-    "        time.sleep(1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1741e043",
-   "metadata": {},
-   "source": [
-    "## TEST output player HP"
+    "    for n in range(3):\n",
+    "        ken.thunder_kick()\n",
+    "        time.sleep(1)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c4e05c46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left player HP: 52, Right player HP: 49"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import keyboard\n",
