--- a/test.ipynb
+++ b/test.ipynb
@@ -9,16 +9,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1741e043",
-   "metadata": {},
-   "source": [
-    "## TEST output player HP"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a53b39d5",
    "metadata": {},
    "outputs": [],
@@ -107,33 +99,250 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1741e043",
+   "metadata": {},
+   "source": [
+    "# Detector Player HP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c4e05c46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Left player HP: 52, Right player HP: 49"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import keyboard\n",
-    "from image_processing.screen_capture import screen_capture\n",
-    "from image_processing.player_hp_detector import L_player_HP, R_player_HP\n",
+    "from utils.screen_capture import screen_capture\n",
+    "from utils.player_hp_detector import L_player_HP, R_player_HP\n",
     "\n",
     "while True:\n",
-    "    player_blood = screen_capture((115, 85, 1165, 100))\n",
-    "    cv2.imshow(\"123\", player_blood)\n",
-    "    print(f\"\\rLeft player HP: {L_player_HP(player_blood)}, Right player HP: {R_player_HP(player_blood)}\", end='')\n",
+    "    # Capture game screen\n",
+    "    screen = screen_capture((0, 0, 1280, 720))\n",
+    "    \n",
+    "    # player_HP = screen_capture((115, 85, 1165, 100))\n",
+    "    player_HP = screen[85:100, 115:1165]\n",
+    "    \n",
+    "    cv2.imshow(\"Player HP\", player_HP)\n",
+    "    \n",
+    "    L_player_HP_part = player_HP[:, 15:(int(player_HP.shape[1] / 2) - 77)]\n",
+    "    cv2.imshow(\"Left Player HP\", L_player_HP_part)\n",
+    "    \n",
+    "    R_player_HP_part = player_HP[:, (int(player_HP.shape[1] / 2) + 77):-15]\n",
+    "    cv2.imshow(\"Right Player HP\", R_player_HP_part)\n",
+    "    \n",
+    "    print(f\"\\rLeft player HP: {L_player_HP(player_HP)}, Right player HP: {R_player_HP(player_HP)}\", end='')\n",
+    "    \n",
+    "    \n",
+    "    if cv2.waitKey(5) & keyboard.is_pressed('q'):\n",
+    "        break\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0e972c8",
+   "metadata": {},
+   "source": [
+    "# Detector Player Drive Gauge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07b19896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import keyboard\n",
+    "import os\n",
+    "import time\n",
+    "from utils.screen_capture import screen_capture\n",
+    "\n",
+    "time.sleep(3)\n",
+    "\n",
+    "# Global variable to keep track of the index\n",
+    "file_name = \"0\"\n",
+    "def save_image(img1, img2, index):\n",
+    "    # Define the save paths for the images with the current index\n",
+    "    save_path_L = f\"game_state_recognition/data/drive_gauge/{file_name}/L_{index}.png\"\n",
+    "    save_path_R = f\"game_state_recognition/data/drive_gauge/{file_name}/R_{index}.png\"\n",
+    "    \n",
+    "    # Save the images\n",
+    "    cv2.imwrite(save_path_L, img1)\n",
+    "    cv2.imwrite(save_path_R, img2)\n",
+    "    print(f\"\\rImages saved: {save_path_L}, {save_path_R}\", end='')\n",
+    "\n",
+    "while True:\n",
+    "    # Capture the screen portion for drive gauge\n",
+    "    player_DriveGauge = screen_capture((375, 115, 910, 125))\n",
+    "    \n",
+    "    # Crop the left and right sections of the drive gauge\n",
+    "    L_player_DriveGauge = player_DriveGauge[:, :223]\n",
+    "    cv2.imshow(\"L Player Power\", L_player_DriveGauge)\n",
+    "    \n",
+    "    R_player_DriveGauge = player_DriveGauge[:, 310:]\n",
+    "    cv2.imshow(\"R Player Power\", R_player_DriveGauge)\n",
+    "\n",
+    "    # save_image(L_player_DriveGauge, R_player_DriveGauge, index)\n",
+    "\n",
+    "    # Wait for 1 ms and break if 'q' is pressed\n",
     "    cv2.waitKey(1)\n",
     "    if keyboard.is_pressed('q'):\n",
     "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0206869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "import cv2\n",
+    "import keyboard\n",
+    "import os\n",
+    "import time\n",
+    "from utils.screen_capture import screen_capture\n",
+    "\n",
+    "# 載入訓練好的分類模型\n",
+    "model = YOLO('drive_gauge_project/yolov8_drive_gauge5/weights/best.pt')\n",
+    "\n",
+    "while True:\n",
+    "    # 擷取整個斗氣槽區域\n",
+    "    player_DriveGauge = screen_capture((375, 115, 910, 125))\n",
+    "    \n",
+    "    # 分割左右玩家的斗氣槽圖像\n",
+    "    L_player_DriveGauge = player_DriveGauge[:, :223]\n",
+    "    R_player_DriveGauge = player_DriveGauge[:, 310:]\n",
+    "\n",
+    "    # 推論（模型為分類任務）\n",
+    "    L_result = model.predict(L_player_DriveGauge, imgsz=64, device=0, verbose=False)\n",
+    "    R_result = model.predict(R_player_DriveGauge, imgsz=64, device=0, verbose=False)\n",
+    "\n",
+    "    # 取得分類結果（分類任務只會有一個結果）\n",
+    "    L_class = L_result[0].probs.top1\n",
+    "    L_conf = L_result[0].probs.data[L_class].item()\n",
+    "    \n",
+    "    R_class = R_result[0].probs.top1\n",
+    "    R_conf = R_result[0].probs.data[R_class].item()\n",
+    "\n",
+    "    # 打印預測結果\n",
+    "    print(f\"\\rL Player Drive Gauge: Class {L_class} (Confidence: {L_conf:.2f}), R Player Drive Gauge: Class {R_class} (Confidence: {R_conf:.2f})\", end='')\n",
+    "\n",
+    "    # 顯示圖像\n",
+    "    cv2.imshow(\"L Player Power\", L_player_DriveGauge)\n",
+    "    cv2.imshow(\"R Player Power\", R_player_DriveGauge)\n",
+    "\n",
+    "    cv2.waitKey(1)\n",
+    "    if keyboard.is_pressed('q'):\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "066022bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0c32459",
+   "metadata": {},
+   "source": [
+    "# Detector Player player SuperArtCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b858fb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import keyboard\n",
+    "import time\n",
+    "from utils.screen_capture import screen_capture\n",
+    "\n",
+    "time.sleep(3)\n",
+    "\n",
+    "# Global variable to keep track of the index\n",
+    "index = 0\n",
+    "file_name = \"CA\"\n",
+    "def save_image(img1, img2, index):\n",
+    "    # Define the save paths for the images with the current index\n",
+    "    save_path_L = f\"game_state_recognition/data/super_art/{file_name}/L_{index}.png\"\n",
+    "    save_path_R = f\"game_state_recognition/data/super_art/{file_name}/R_{index}.png\"\n",
+    "    \n",
+    "    # Save the images\n",
+    "    cv2.imwrite(save_path_L, img1)\n",
+    "    cv2.imwrite(save_path_R, img2)\n",
+    "    print(f\"Images saved: {save_path_L}, {save_path_R}\")\n",
+    "    \n",
+    "for n in range(1001):\n",
+    "# while True:\n",
+    "    player_DriveGauge = screen_capture((50, 675, 1230, 730))\n",
+    "    L_player_DriveGauge = player_DriveGauge[:, :60]\n",
+    "    R_player_DriveGauge = player_DriveGauge[:, 1125:]\n",
+    "\n",
+    "    cv2.imshow(\"Left Gauge\", L_player_DriveGauge)\n",
+    "    cv2.imshow(\"Right Gauge\", R_player_DriveGauge)\n",
+    "    \n",
+    "    save_image(L_player_DriveGauge, R_player_DriveGauge, index)\n",
+    "    \n",
+    "    index += 1\n",
+    "    \n",
+    "    # Break loop if 'q' is pressed\n",
+    "    cv2.waitKey(1)\n",
+    "    if keyboard.is_pressed('q'):\n",
+    "        print(\"退出程式...\")\n",
+    "        break\n",
+    "\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51ac5cc5",
+   "metadata": {},
+   "source": [
+    "# Mouse Color Tracker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2596ff8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from utils.screen_color_tracker import MouseColorTracker\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    tracker = MouseColorTracker(region_size=10)\n",
+    "    \n",
+    "    print(\"Press q to stop tracking.\")\n",
+    "    try:\n",
+    "        while True:\n",
+    "            # tracker.get_color_rgb()  # Uncomment to track RGB colors\n",
+    "            tracker.get_color_hsv()  # Track HSV colors\n",
+    "            cv2.waitKey(100)\n",
+    "            if keyboard.is_pressed('q'):\n",
+    "                break\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"\\nTracking ended.\")"
    ]
   }
  ],
